chore: update 11ty to v2 (#843)
Co-authored-by: scissorsneedfoodtoo <scissorsneedfoodtoo@gmail.com>

--- a/src/404.njk
+++ b/src/404.njk
@@ -17,7 +17,7 @@ permalink: 404.html
                 <section class="error-message" data-test-label="error-message">
                     <h1 class="error-code">404</h1>
                     <p class="error-description">{% t '404.page-not-found' %}</p>
-                    <a class="error-link" href="{{ site.url }}">{% t '404.go-to-front-page' %} →</a>
+                    <a class="error-link" data-test-label="error-link" href="{{ site.url }}">{% t '404.go-to-front-page' %} →</a>
                 </section>
             </div>
         </main>
