--- a/src/sitemaps/sitemap-stylesheet.njk
+++ b/src/sitemaps/sitemap-stylesheet.njk
@@ -99,7 +99,7 @@ eleventyExcludeFromCollections: true
                         </table>
                     </xsl:if>
                     <xsl:if test="count(sitemap:sitemapindex/sitemap:sitemap) &lt; 1">
-                        <p class="desc"><a href="{{ site.url }}/sitemap.xml" class="back-link">&#8592; Back to index</a></p>
+                        <p class="desc"><a href="{{ '/sitemap.xml' | htmlBaseUrl(site.url) }}" class="back-link">&#8592; Back to index</a></p>
                         <table id="sitemap" cellpadding="3">
                             <thead>
                                 <tr>
@@ -131,7 +131,7 @@ eleventyExcludeFromCollections: true
                                 </xsl:for-each>
                             </tbody>
                         </table>
-                        <p class="desc"><a href="{{ site.url }}/sitemap.xml" class="back-link">&#8592; Back to index</a></p>
+                        <p class="desc"><a href="{{ '/sitemap.xml' | htmlBaseUrl(site.url) }}" class="back-link">&#8592; Back to index</a></p>
                     </xsl:if>
                 </div>
             </body>
