--- a/src/sitemaps/sitemaps.njk
+++ b/src/sitemaps/sitemaps.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: ghost.sitemaps
+  data: datasource.sitemaps
   size: 1
   alias: sitemap
   addAllPagesToCollections: true
