--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -61,7 +61,7 @@ time #}
                         </section>
                         {% if adsEnabled %}
                             <div class="sidebar">
-                                {% if canonicalUrl == "https://www.freecodecamp.org/news/are-you-being-micro-managed-manage-your-relationship-with-your-manager-instead-9ad10b28bcda/" %}
+                                {% if canonicalUrl == "http://localhost:8080/news/embedded-videos-post/" %}
                                     {% include "partials/gam-ad.njk" %}
                                 {% else %}
                                     {% for i in range(0, numOfSidebarAds) %}
@@ -92,7 +92,7 @@ time #}
                         {% include "partials/learn-cta-row.njk" %}
                     {% endif %}
                 </section>
-                {% if adsEnabled and canonicalUrl != "https://www.freecodecamp.org/news/are-you-being-micro-managed-manage-your-relationship-with-your-manager-instead-9ad10b28bcda/" %}
+                {% if adsEnabled and canonicalUrl != "http://localhost:8080/news/embedded-videos-post/" %}
                     <div class="banner-ad bottom">
                         {% include "partials/ad.njk" %}
                     </div>
@@ -107,7 +107,7 @@ time #}
 {% endblock %}
 
 {% block monetization %}
-    {% if adsEnabled and canonicalUrl != "https://www.freecodecamp.org/news/are-you-being-micro-managed-manage-your-relationship-with-your-manager-instead-9ad10b28bcda/" %}
+    {% if adsEnabled and canonicalUrl != "http://localhost:8080/news/embedded-videos-post/" %}
         <script
             data-ad-client="{{ secrets.googleAdsenseDataAdClient }}"
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
