--- a/src/_includes/partials/gam-ad.njk
+++ b/src/_includes/partials/gam-ad.njk
@@ -2,9 +2,6 @@
     {% set localizedAdText %}{% t 'ad-text' %}{% endset %}
     <div class="ad-text" data-test-label="ad-text">{{ localizedAdText | upper }}</div>
     <!-- /23075930536/homepage-top-test -->
-    <div id='div-gpt-ad-1711446808518-0' style='min-width: 300px; min-height: 600px; background-color: #ebebeb;'>
-    <script>
-        googletag.cmd.push(function() { googletag.display('div-gpt-ad-1711446808518-0'); });
-    </script>
+    <div style='min-width: 300px; min-height: 600px; background-color: #ebebeb;' class="side-bar-ad-slot">
     </div>
 </div>
