feat: add datasource meta info to post heads

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -118,6 +118,9 @@
         {% if canonicalUrl == "https://www.freecodecamp.org/news/are-you-being-micro-managed-manage-your-relationship-with-your-manager-instead-9ad10b28bcda/" %}
             <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
         {% endif %}
+
+        {% block datasourceInfo %}
+        {% endblock %}
     </head>
 
     {% if site.lang in ['ar', 'fa', 'ur', 'he'] %}
