--- a/src/_includes/partials/gam-ad-bottom.njk
+++ b/src/_includes/partials/gam-ad-bottom.njk
@@ -1,7 +1,6 @@
 <div class="ad-wrapper" data-test-label="ad-wrapper">
     {% set localizedAdText %}{% t 'ad-text' %}{% endset %}
     <div class="ad-text" data-test-label="ad-text">{{ localizedAdText | upper }}</div>
-    <!-- /23075930536/homepage-top-test -->
-    <div style='min-width: 300px; min-height: 600px; background-color: #ebebeb;' class="side-bar-ad-slot">
+    <div style='display: block; min-height: 200px; background-color: #ebebeb;' id="gam-ad-bottom">
     </div>
 </div>
