--- a/src/_includes/partials/gam-lazy-loader.njk
+++ b/src/_includes/partials/gam-lazy-loader.njk
@@ -2,17 +2,22 @@
 document.addEventListener('DOMContentLoaded', function() {
     var adElements = document.querySelectorAll('.side-bar-ad-slot');
     let counter = 0;
+
+    // Give unique ids to sidebar ad elements 
     adElements.forEach(function(adElement) {
         adElement.id = 'side-gam-ad-' + counter;
         counter++;  // Increment the counter for the next ad element
     });
 
     // Define the distance in pixels before the ad enters viewport
-    var loadBeforeViewport = 200; 
+    var loadBeforeViewport = 100; 
     
+    window.googletag = window.googletag || {cmd: []};
     googletag.cmd.push(function() {
+
+        // Display side ads based on user scroll
         adElements.forEach(function(adElement) {
-            googletag.defineSlot('/23075930536/homepage-top-test', [300, 600], adElement.id)
+            googletag.defineSlot('/23075930536/post-side', [300, 600], adElement.id)
                      .addService(googletag.pubads());
 
             let observer = new IntersectionObserver((entries) => {
@@ -30,6 +35,24 @@ document.addEventListener('DOMContentLoaded', function() {
 
             observer.observe(adElement); // Start observing each ad element
         });
+
+        // Button side ads based on user scroll
+        const bottomAdElement = document.getElementById("gam-ad-bottom");
+        googletag.defineSlot('/23075930536/post-bottom', ['fluid'], 'gam-ad-bottom').addService(googletag.pubads());
+
+        const bottomAdObserver = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    googletag.display(entry.target.id);
+                    bottomAdObserver.unobserve(entry.target); // Stop observing once the ad is loaded
+                }
+            });
+        }, {
+            root: null,
+            rootMargin: '0px 0px ' + loadBeforeViewport + 'px 0px', 
+            threshold: 0
+        });
+        bottomAdObserver.observe(bottomAdElement); 
 
         googletag.pubads().enableSingleRequest();
         googletag.enableServices();
