--- a/src/_includes/partials/gam-lazy-loader.njk
+++ b/src/_includes/partials/gam-lazy-loader.njk
@@ -16,8 +16,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
         // Define side ads
         adElements.forEach(function(adElement) {
-            googletag.defineSlot('/23075930536/post-side', [300, 600], adElement.id)
-                     .addService(googletag.pubads());
+            googletag.defineSlot('/23075930536/post-side', [[292, 30], [240, 400], [300, 75], [216, 54], [250, 360], [300, 50], 'fluid', [300, 31], [120, 20], [300, 250], [120, 30], [180, 150], [200, 446], [168, 42], [200, 200], [160, 600], [120, 90], [125, 125], [240, 133], [120, 60], [1, 1], [120, 240], [220, 90], [216, 36], [250, 250], [168, 28], [234, 60], [120, 600], [300, 600], [88, 31], [300, 100]], adElement.id).addService(googletag.pubads());
         });
 
         // Define bottom ad
