--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -125,6 +125,20 @@ time #}
     {% endif %}
 {% endblock %}
 
+{% block mathjax %}
+    {% for tag in post.tags %}
+        {% if ((tag.slug | lower) === 'mathjax') %}
+            <script
+                type="text/javascript"
+                id="MathJax-script"
+                data-test-label="mathjax-script"
+                src="https://cdn.freecodecamp.org/news-assets/mathjax/3.2.2/tex-mml-chtml.min.js"
+                defer
+            ></script>
+        {% endif %}
+    {% endfor %}
+{% endblock %}
+
 {% block seo %}
     <meta name="description" content="{{ post.excerpt }}">
 
