fix: missing MathJax resources

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -132,7 +132,7 @@ time #}
                 type="text/javascript"
                 id="MathJax-script"
                 data-test-label="mathjax-script"
-                src="https://cdn.freecodecamp.org/news-assets/mathjax/3.2.2/tex-mml-chtml.min.js"
+                src="https://cdn.freecodecamp.org/news-assets/mathjax/3.2.2/es5/tex-mml-chtml.js"
                 defer
             ></script>
         {% endif %}
