--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -14,7 +14,7 @@
         <div class="inner">
             <article class="post-full post {{ "no-image" if not (doc.feature_image) }}">
                 <header class="post-full-header">
-                    <h1 class="post-full-title">{{ title }}</h1>
+                    <h1 class="post-full-title" data-test-label="post-full-title">{{ title }}</h1>
                 </header>
                 {% if doc.feature_image %}
                     <figure class="post-full-image">
@@ -84,7 +84,7 @@
     <meta name="twitter:url" content="{{ doc.path | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ doc.feature_image }}">
     <meta name="twitter:label1" content="Written by">
-    <meta name="twitter:data1" content="{{ doc.primary_author.name }}">
+    <meta name="twitter:data1" content="{{ doc.primary_author.name if doc.primary_author else 'freeCodeCamp.org' }}">
     <meta name="twitter:label2" content="Filed under">
     <meta name="twitter:data2" content="{{ doc.tags | join(", ", "name") }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
