--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -23,6 +23,7 @@
                 target="_blank"
                 data-test-label="donate-button"
             >{% t 'buttons.donate' %}</a>
+           <button class="toggle-button-nav" id="toggle-dark-mode" data-test-label="dark-mode-button">{% t 'buttons.toggle-dark-mode' %}</button>
         </div>
     </div>
 </nav>
