feat: copyable content headers

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -48,6 +48,7 @@
             {% include "assets/js/search-bar.js" %}
             {% include "assets/js/client-dayjs.js" %}
             {% include "assets/js/cookie-checker.js" %}
+            {% include "assets/js/copyable-links.js" %}
         {% endset %}
         <script>{{ js | jsMin | safe }}</script>
 
