feat: update trending title

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -19,7 +19,7 @@
             </p>
         </div>
         <div class="trending-guides" data-test-label="trending-guides">
-            <h2 id="trending-guides" class="col-header">{% t 'footer.trending-guides' %}</h2>
+            <h2 id="trending-guides" class="col-header">{% t 'footer.trending-books-and-handbooks' %}</h2>
             <ul class="trending-guides-articles" aria-labelledby="trending-guides">
                 <li>
                     <a href="{% t 'trending:article0link' %}" rel="noopener noreferrer" target="_blank">
