--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -62,7 +62,7 @@
         {% if secrets.eleventyEnv === 'prod' %}
             {% include "partials/gtm-head.njk" %}
         {% endif %}
-        
+
         {# Dynamically load MathJax script #}
         {% block mathjax %}
         {% endblock %}
@@ -137,6 +137,8 @@
     {% else %}
         <body class="home-template">
     {% endif %}
+
+    {% include "partials/scroll-button.njk" %}
 
     {% if secrets.eleventyEnv === 'prod' %}
         {% include "partials/gtm-body.njk" %}
