test the scroll button

--- a/src/_includes/partials/scroll-button.njk
+++ b/src/_includes/partials/scroll-button.njk
@@ -1,4 +1,4 @@
-<button onclick="goToTop()" id="scrollToTop" title="Go to top">{% t 'buttons.scroll-to-top' %}</button>
+<button onclick="goToTop()" id="scrollToTop" title="Go to top" data-test-label="scroll-to-top">{% t 'buttons.scroll-to-top' %}</button>
 
 {% block scripts %}
     {% set js %}
