--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -856,7 +856,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 
 .post-full-content h2:target,
 .post-full-content h3:target {
-  scroll-margin-top: calc(var(--header-height) + 0.5em);
+  scroll-margin-top: calc(var(--header-height) + 44px + 0.5em); /* 44px height of the banner */
 }
 
 .post-full-content li {
